--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,13 @@
     <script src='/scripts/entities/fish.js'></script>
     <script src='/scripts/entities/go_fish.js'></script>
     <script src='/scripts/entities/switch_fish.js'></script>
+    <script src='/scripts/entities/bite_fish.js'></script>
 
     <script src='/scripts/driver.js'></script>
+    <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
   <body>
-    <div id='fishtank' style="position: relative"></div>
+    <div id='fishtank' style="position: relative;">
+    </div>
   </body>
 </html>
